--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "First Knit"
-author: "Your Name"
+author: "Juliet Clark"
 output: 
   html_document:
     number_sections: true
@@ -17,8 +17,7 @@ Here are just a few questions so I can get to know you and so you can get practi
 Where did you attend High School, and did you graduate? Compare english class to math, is one easier for you than the other? Finally which subject did you do the best in? Your answer should have at least two sentences devoted to each question.  
   
 ### my answer     
-  
-
+  I attended highschool at the Palmdale Aerospace Academy, I did graduate. I had an easier time in english than in math. I always struggled in math and even with hours of tutoring it was still painful to learn. I did always excell in english and history. I always loved to write and took years of yearbook just to expand on my journaling skills.  
      
 
 
@@ -26,14 +25,14 @@ Where did you attend High School, and did you graduate? Compare english class to
  For this class  you need a computer you can use at home.  So, what kind is it (windows, Apple, Linux)?  On a scale of 1 to 10, where 1 is a total dummy (doesn't know a mouse from a keyboard) and 10 is a complete geek (knows computer stuff in and out) How do you rate yourself?  You also need to have have internet access. How is your connection to the internet where you live?
 
 ### my answer   
-  
+  I use a MacBook Air. On a scale of 1-10 I rate myself a 4 when it comes to knowledge on how to use computers. I struggle a lot when it comes to downloading documents and saving everything onto my computer. My connection at home is fine but will tend to have issues around night when everyone at home is using it. 
    
 
 ## Others and You?   
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
 
 ### my answer     
-  
+ I prefer to be called Juliet.  
    
  
 
@@ -44,7 +43,7 @@ What name do you prefer to be called by your classmates and instructor, if your 
 What do you want to achieve in life?  What college subject do you think would be of the greatest interest to you? What degree or certificate are you trying to achieve?
 
 ### my answer     
-  
+  I would like to become a Registered Nurse and possibly pursue a career to become a Nurse Practitioner. So far, taking two classes about psycology I believe that will remain to be one of the most interesting classes to me. I hope to pursue a bachelors of science as well as a masters. 
    
  
 
@@ -55,8 +54,8 @@ What do you want to achieve in life?  What college subject do you think would be
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
 ### my answer     
+  I have only been to Mexico but there are many countries I would love to visit such as Norway, France, and Italy. I have never been in the military but if I had to choose a branch I would choose the Army. 
   
-   
   
 
 
@@ -68,7 +67,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
  
 
 ### my answer     
-  
+  This is my first college math course. I will aim for an A but for nursing requirements hope to get above a B. 
    
  
 
